[tool.poetry]
name = "rana-new-poetry"
version = "0.1.0"
description = ""
authors = ["Ranosh <my@gm.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.2"
coverage = "^7.3.2"
pylint = "^3.0.2"
black = "^23.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
